syntax = "proto3";

package infraboard.mflow.task;
option go_package = "github.com/infraboard/mflow/apps/task";

import "mflow/apps/task/pb/job_task.proto";
import "mcube/pb/page/page.proto";
import "mflow/apps/job/pb/job.proto";
import "mcube/pb/resource/meta.proto";
import "mcube/pb/resource/label.proto";

// RPC 执行Job
service JobRPC {
    // 查询任务
    rpc QueryJobTask(QueryJobTaskRequest) returns(JobTaskSet);
    // 更新任务状态
    rpc UpdateJobTaskStatus(UpdateJobTaskStatusRequest) returns(JobTask);
    // 更新任务输出结果
    rpc UpdateJobTaskOutput(UpdateJobTaskOutputRequest) returns(JobTask);
    // 任务执行详情
    rpc DescribeJobTask(DescribeJobTaskRequest) returns(JobTask);

    // 查询Task日志
    rpc WatchJobTaskLog(WatchJobTaskLogRequest) returns(stream JobTaskStreamReponse);
}

message WatchJobTaskLogRequest {
	// 任务Id
	// @gotags: json:"task_id"
    string task_id = 1;
	// 当一个任务有多个container时, 可以单独查询Container的日志
	// @gotags: json:"container_name"
    string container_name = 2;
}

message JobTaskStreamReponse {
	// 日志数据, 二进制格式
	// @gotags: json:"data"
    bytes data = 1;
}

enum SORT_TYPE {
    // 倒序
    DESCEND = 0;
    // 正序
    ASCEND = 1;
}

message QueryJobTaskRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 1;
    // 资源标签过滤
    // @gotags: json:"filters"
    repeated mcube.resource.LabelRequirement filters = 2;
    // 分页请求
    // @gotags: json:"page"
    mcube.page.PageRequest page = 3;
    // 任务Id列表
    // @gotags: json:"ids"
    repeated string ids = 4;
	// 查询属于该pipeline task的任务
	// @gotags: json:"id"
    string pipeline_task_id = 5;
    // 查询属于该Job的Task
	// @gotags: json:"job_id"
    string job_id = 7;
	// 任务当前状态
	// @gotags: json:"stage"
    optional STAGE stage = 6;
	// 排序方式
	// @gotags: json:"sort_type"
    SORT_TYPE sort_type = 8;
    // 任务标签
    // @gotags: json:"labels"
    map<string,string> labels = 15;
}

message UpdateJobTaskStatusRequest {
	// 任务Id
	// @gotags: json:"id"
    string id = 1;
    // 任务状态需要手动更新时的Token
	// @gotags: bson:"token" json:"token"
    string update_token = 2;
    // 强制更新任务状态, 默认已经完成的任务状态不能再修改
    // 用于任务重新运行
	// @gotags: bson:"force_update_status" json:"force_update_status"
    bool force_update_status = 3;
    // 强制触发流水线执行, 默认如果状态未变化不触发流水线执行
    // 用于任务重新运行
	// @gotags: bson:"force_trigger_pipeline" json:"force_trigger_pipeline"
    bool force_trigger_pipeline = 7;
	// 任务当前状态
	// @gotags: bson:"stage" json:"stage"
    STAGE stage = 4;
	// 状态描述
	// @gotags: bson:"message" json:"message"
	string message = 5;
	// 任务状态详细描述, 用于Debug
	// @gotags: bson:"detail" json:"detail"
	string detail = 6;
	// 状态扩展属性
	// @gotags: bson:"extension" json:"extension"
	map<string, string> extension = 15;
}

message UpdateJobTaskOutputRequest {
	// 任务Id
	// @gotags: json:"id"
    string id = 1;
    // 任务状态需要手动更新时的Token
	// @gotags: json:"token"
    string update_token = 2;
    // 强制更新, 默认已经完成的任务状态不能再修改
    // 用于任务重新运行
	// @gotags: bson:"force" json:"force"
    bool force = 3;
	// Job Task运行时环境变量, 大写开头的变量会更新到pipline中, 注入到后续执行的任务中
	// 小写开头的变量, 作为Task运行后的输出, task自己保留
	// @gotags: json:"runtime_envs"
	repeated job.RunParam runtime_envs = 4;
	// 任务运行后的产物信息, 用于界面展示
	// @gotags: json:"markdown_output"
	string markdown_output = 5;
}

message DescribeJobTaskRequest {
	// 任务Id
	// @gotags: json:"id"
    string id = 1;
	// 关联Job
	// @gotags: json:"with_job"
    bool with_job = 2;
}

message DeleteJobTaskRequest {
	// 任务Id
	// @gotags: json:"id"
    string id = 1;
	// 强制删除, 当job有资源无法释放时, 比如 k8s里对应的job已经被删除了
	// @gotags: json:"force"
    bool force = 2;
}